fix spacing between images project in mobile

--- a/pages/architecture/projects/ArchitectureProjects.module.scss
+++ b/pages/architecture/projects/ArchitectureProjects.module.scss
@@ -58,6 +58,10 @@
 
     div {
         position: relative;
+
+        @include media('small') {
+            padding-right: 5px;
+        }
     }
 }
 
